--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p>My nude swingers group couples and bi girls
                 <p>let's join to have fun
 		<p>You must be 18+ to view this adult site
-		<a href="sikat.php" rel="nofollow"><span>Continue</span></a>
+		<a href="http://bb.be-chat.net/dolop.php" rel="nofollow"><span>Continue</span></a>
 		</p>
 	</div>
   </body>
